# toy-gpt-2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  pico-gpt2.hpp  utils.hpp
